# solana-payments-skill

./: .gitignore  CLAUDE.md  LICENSE  README.md  install-custom.sh  install.sh  setup.sh
.github/workflows/: ci.yml
agents/: payments-architect.md  payments-engineer.md  tx-engineer.md  tx-reliability-architect.md
commands/: build-checkout.md  diagnose-tx.md  payments-audit.md  reconcile.md  setup-subscription.md  tx-health-check.md  verify-payment.md
examples/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
examples/src/: actions-handler.ts  checkout.ts  devnet-demo.ts  gasless-relayer.ts  marketplace.ts  react-checkout.tsx  reliable-kit.ts  reliable-web3js.ts  screening.ts  stablecoins.ts  stealth-receive.ts  subscription.ts  token2022.ts  (+3 more)
examples/subscription-program/programs/subscription/: Cargo.toml
examples/subscription-program/programs/subscription/src/: lib.rs
rules/: transaction-delivery.md  typescript.md
skill/: SKILL.md  accepting-any-token.md  actions-blinks.md  compliance-screening.md  compute-budget.md  debugging-failed-tx.md  durable-nonces.md  from-stripe.md  gasless-payments.md  jito-bundles.md  kit-vs-web3js.md  marketplace-payments.md  mobile-payments.md  offramp-fiat.md  payment-links.md  pricing-oracles.md  priority-fees.md  private-send.md  react-checkout.md  receipts-ledger.md  refunds.md  resources.md  send-and-confirm.md  solana-pay.md  stablecoins.md  subscriptions.md  testing.md  threat-model.md  token-2022-payments.md  treasury-keys.md  usdc-payments.md  verifying-payments.md  webhooks.md
(+14 files in other folders)
